# jarvis-c-

./: CMakeLists.txt  LICENSE  README.md
src/: .components  LICENSE  main.cpp
src/.iham/: main.py  ui.py
src/.ilham/actions/: tts.py
src/app/: application.cpp  application.h
src/config/: app_config.cpp  app_config.h
src/core/: chat_types.h  http_client.cpp  http_client.h  providers.cpp  providers.h
src/gui/: main_window.cpp  main_window.h  orb_widget.cpp  orb_widget.h
src/platform/: platform_services.cpp  platform_services.h
src/runtime/: runtime.cpp  runtime.h
src/tools/: tool_registry.cpp  tool_registry.h
src/ui/: asset_catalog.cpp  asset_catalog.h
src/util/: common.cpp  common.h  json.cpp  json.h
